tests/skip/duplicate-attr.stderr
error: encountered duplicate `#[bits = N]` attribute for field
 --> $DIR/duplicate-attr.rs:5:15
  |
5 |     #[skip] #[skip]
  |               ^^^^

error: duplicate `#[bits = M]` here
 --> $DIR/duplicate-attr.rs:5:7
  |
5 |     #[skip] #[skip]
  |       ^^^^
